correct some typo

--- a/prompt.ipynb
+++ b/prompt.ipynb
@@ -106,7 +106,7 @@
     "        f.write(python_code)\n",
     "    \n",
     "    return python_code\n",
-    "\n",
+    " \n",
     "def get_response_from_llm(prompt, token_limit=1024):\n",
     "    message = client.messages.create(\n",
     "        model=deployment_name,\n",
@@ -209,7 +209,7 @@
    "id": "1a1514c9",
    "metadata": {},
    "source": [
-    "Nice right! but it still has a lot of things it cannot handle , like proper tyope casts, missing rows, missing files etc\n",
+    "Nice right! but it still has a lot of things it cannot handle , like proper type casts, missing rows, missing files etc\n",
     "This leads to \n",
     "\n",
     "### Level 3: Chain of Thought\n",
@@ -270,7 +270,7 @@
    "id": "57d37b33",
    "metadata": {},
    "source": [
-    "Seems pretty neat !, but is it maintainle ? is it like a code written by someone senior ?\n",
+    "Seems pretty neat !, but is it maintainable ? is it like a code written by someone senior ?\n",
     "\n",
     "### Level 4: Role + Constraints\n",
     "\n",
