addressing review comments

--- a/prompt.ipynb
+++ b/prompt.ipynb
@@ -106,7 +106,7 @@
     "        f.write(python_code)\n",
     "    \n",
     "    return python_code\n",
-    " \n",
+    "\n",
     "def get_response_from_llm(prompt, token_limit=1024):\n",
     "    message = client.messages.create(\n",
     "        model=deployment_name,\n",
@@ -475,30 +475,109 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4d8e84dd",
+   "metadata": {},
+   "source": [
+    "#### Use-case 1: Refactoring the code to be more Object-Oriented\n",
+    "\n",
+    "When you have working procedural code but want to refactor it into an object-oriented design, decomposition helps break down the transformation into clear architectural phases (design, interfaces, implementation)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd81ed09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('traffic_loss_calculator5.py', 'r') as f:\n",
+    "    code_content = f.read()\n",
+    "\n",
+    "prompt = f\"\"\"\n",
+    "We have a working procedural python script 'traffic_loss_calculator5.py' that calculates packet loss from a CSV file.\n",
+    "I want to refactor this into an object-oriented design with proper separation of concerns.\n",
+    "\n",
+    "Here is the current code:\n",
+    "{code_content}\n",
+    "\n",
+    "Refactor this code using decomposition approach with these specific phases:\n",
+    "\n",
+    "Phase 1 - Define Data Models (Schema):\n",
+    "1. Define a `TrafficFlowRecord` dataclass to represent a single flow record with fields: flow_id, tx_frames, rx_frames, loss_percentage\n",
+    "2. Add validation methods in the dataclass\n",
+    "\n",
+    "Phase 2 - Define Abstract Interfaces:\n",
+    "3. Define a `DataSource` Abstract Base Class with methods: validate(), read_records(), get_schema()\n",
+    "4. Define a `LossCalculator` class to handle the business logic of calculating packet loss\n",
+    "\n",
+    "Phase 3 - Implement Concrete Classes:\n",
+    "5. Implement `CSVDataSource` inheriting from `DataSource` with streaming capability for large files\n",
+    "6. Implement the `TrafficLossProcessor` class that coordinates data source and calculator\n",
+    "\n",
+    "Phase 4 - Maintain CLI Interface:\n",
+    "7. Keep the command-line interface working with argparse\n",
+    "8. Ensure logging is properly integrated throughout\n",
+    "\n",
+    "For each phase, briefly explain your design decisions (1-2 sentences).\n",
+    "Then return the final refactored python code within ```python ... ``` block.\n",
+    "\"\"\"\n",
+    "response = get_response_from_llm(prompt, token_limit=4000)\n",
+    "print(response)\n",
+    "\n",
+    "extract_and_save_python_code(response, output_file='traffic_loss_calculator7.py')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88531a22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# lets check the new code is still running fine\n",
+    "!python traffic_loss_calculator7.py --file stats.csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42d5491f",
+   "metadata": {},
+   "source": [
+    "#### Use-case 2: Generating Tests with Decomposition\n",
+    "\n",
+    "Another use-case where we can use decomposition technique is to generate comprehensive tests for AI-generated code.\n",
+    "This is important in AI-guided code development to ensure code quality and coverage."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0fba508e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "with open('traffic_loss_calculator7.py', 'r') as f:\n",
+    "    code_content = f.read()\n",
+    "\n",
     "prompt = f\"\"\"\n",
     "We have created a python script to read a csv file called 'stats.csv'\n",
-    "The code is saved with filename 'traffic_loss_calculator5.py'.\n",
-    "and we can execute it as: python traffic_loss_calculator5.py --file stats.csv \n",
+    "The code is saved with filename 'traffic_loss_calculator7.py'.\n",
+    "and we can execute it as: python traffic_loss_calculator7.py --file stats.csv \n",
     "Here is the code:\n",
     "{code_content}\n",
     "\n",
-    "I want to generate unit tests for this code using simple python functions and pytest framework.\n",
+    "I want to generate unit tests  as well as some functional tests for this code using simple python functions and pytest framework.\n",
     "Let's break down the task which needs to be done.\n",
     "1. Analyze the code and identify key areas we can test\n",
     "2  Create test cases where you will creating mock data to simulate different scenarios and call the python code.\n",
     "4. please ensure if you are creating mock data files, you clean them up after the test is done.\n",
-    "3. Finally combine all the test -cases maybe 3or 4 in number in a single python file.\n",
+    "3. Finally combine all the test -cases maybe 3 or 4 in number in a single python file.\n",
     "\n",
     "\n",
     "Return only the python code within ```python ... ``` block.\n",
     "\"\"\"\n",
-    "response = get_response_from_llm(prompt, token_limit=4000)\n",
+    "response = get_response_from_llm(prompt, token_limit=5000)\n",
     "print(response)\n",
     "\n",
     "extract_and_save_python_code(response, output_file='check_loss_calculator.py')"
