--- a/prompt.ipynb
+++ b/prompt.ipynb
@@ -45,11 +45,11 @@
     "def create_csv(file_name):\n",
     "    # Create data as list of lists\n",
     "    data = [\n",
-    "        [\"Flow ID\",\"Tx Frames\",\"Rx Frames\",\"Frames Delta\",\"Loss %\",\"Tx Frame Rate\",\"Rx Frame Rate\",\"Tx L1 Rate (bps)\",\"Rx L1 Rate (bps)\",\"Rx Bytes\",\"Tx Rate (Bps)\",\"Rx Rate (Bps)\",\"Tx Rate (bps)\",\"Rx Rate (bps)\",\"Tx Rate (Kbps)\",\"Rx Rate (Kbps)\",\"Tx Rate (Mbps)\",\"Rx Rate (Mbps)\",\"Store-Forward Avg Latency (ns)\",\"Store-Forward Min Latency (ns)\",\"Store-Forward Max Latency (ns)\",\"First TimeStamp\",\"Last TimeStamp\"],\n",
-    "        [\"Flow 1\",1000,1000,0,0.000,0.000,0.000,0.000,0.000,66000,0.000,0.000,0.000,0.000,0.000,0.000,0.000,0.000,0,0,0,\"00:00:01.063\",\"00:00:04.393\"],\n",
-    "        [\"Flow 2\",1000,100,0,0.000,0.000,0.000,0.000,0.000,66000,0.000,0.000,0.000,0.000,0.000,0.000,0.000,0.000,0,0,0,\"00:00:01.063\",\"00:00:04.393\"],\n",
-    "        [\"Flow 3\",1000,500,0,0.000,0.000,0.000,0.000,0.000,66000,0.000,0.000,0.000,0.000,0.000,0.000,0.000,0.000,0,0,0,\"00:00:01.063\",\"00:00:04.393\"],\n",
-    "        [\"Flow 4\",1000,\"N/A\",0,0.000,0.000,0.000,0.000,0.000,66000,0.000,0.000,0.000,0.000,0.000,0.000,0.000,0.000,0,0,0,\"00:00:01.063\",\"00:00:04.393\"]\n",
+    "        [\"Flow ID\",\"Tx Frames\",\"Rx Frames\",\"Frames Delta\",\"Tx Frame Rate\",\"Rx Frame Rate\",\"Tx L1 Rate (bps)\",\"Rx L1 Rate (bps)\",\"Rx Bytes\",\"Tx Rate (Bps)\",\"Rx Rate (Bps)\",\"Tx Rate (bps)\",\"Rx Rate (bps)\",\"Tx Rate (Kbps)\",\"Rx Rate (Kbps)\",\"Tx Rate (Mbps)\",\"Rx Rate (Mbps)\",\"Store-Forward Avg Latency (ns)\",\"Store-Forward Min Latency (ns)\",\"Store-Forward Max Latency (ns)\",\"First TimeStamp\",\"Last TimeStamp\"],\n",
+    "        [\"Flow 1\",1000,1000,0,0.000,0.000,0.000,0.000,66000,0.000,0.000,0.000,0.000,0.000,0.000,0.000,0.000,0,0,0,\"00:00:01.063\",\"00:00:04.393\"],\n",
+    "        [\"Flow 2\",1000,100,0,0.000,0.000,0.000,0.000,66000,0.000,0.000,0.000,0.000,0.000,0.000,0.000,0.000,0,0,0,\"00:00:01.063\",\"00:00:04.393\"],\n",
+    "        [\"Flow 3\",1000,500,0,0.000,0.000,0.000,0.000,66000,0.000,0.000,0.000,0.000,0.000,0.000,0.000,0.000,0,0,0,\"00:00:01.063\",\"00:00:04.393\"],\n",
+    "        [\"Flow 4\",1000,\"N/A\",0,0.000,0.000,0.000,0.000,66000,0.000,0.000,0.000,0.000,0.000,0.000,0.000,0.000,0,0,0,\"00:00:01.063\",\"00:00:04.393\"]\n",
     "    ]\n",
     "\n",
     "    # Write to CSV file\n",
@@ -57,7 +57,7 @@
     "        writer = csv.writer(file)\n",
     "        writer.writerows(data)\n",
     "\n",
-    "create_csv(\"stats.csv\")\n"
+    "create_csv(\"stats.csv\")"
    ]
   },
   {
@@ -118,7 +118,7 @@
     "    return message.content[0].text\n",
     "\n",
     "# API Configuration\n",
-    "endpoint = \"https://foundary-codegen-1.services.ai.azure.com/anthropic/\"\n",
+    "endpoint = \"https://ai-workshop-resouce.services.ai.azure.com/anthropic/\"\n",
     "deployment_name = \"claude-sonnet-4-5\"\n",
     "api_key = \"\"\n",
     "\n",
@@ -240,10 +240,10 @@
     ".\n",
     "\"Flow N\",1000,200,....\n",
     "\n",
-    "Before coding, consider the following edge cases and handle them in your code:\n",
-    "1. How do we handle missing files?\n",
-    "2. How do we handle non-numeric rows?\n",
-    "3. How do we safely convert types?\n",
+    "Before coding, Consider the following in your thought process:\n",
+    "1. Check for the file if it is missing or not.\n",
+    "2. Check for non-numeric rows and handle them gracefully. Displaying a warning message would be beneficial.\n",
+    "3. Convert types safely. make sure to handle exceptions.\n",
     "\n",
     "Return only the python code without any explanation or comments.\n",
     "\"\"\"\n",
@@ -303,10 +303,10 @@
     ".\n",
     "\"Flow N\",1000,200,....\n",
     "\n",
-    "Before coding, consider the following edge cases and handle them in your code:\n",
-    "1. How do we handle missing files?\n",
-    "2. How do we handle non-numeric rows?\n",
-    "3. How do we safely convert types?\n",
+    "Before coding, Consider the following in your thought process:\n",
+    "1. Check for the file if it is missing or not.\n",
+    "2. Check for non-numeric rows and handle them gracefully. Displaying a warning message would be beneficial.\n",
+    "3. Convert types safely. make sure to handle exceptions.\n",
     "\n",
     "Act as a Senior Engineer.\n",
     "Constraints:\n",
@@ -368,10 +368,10 @@
     ".\n",
     "\"Flow N\",1000,200,....\n",
     "\n",
-    "Before coding, consider the following edge cases and handle them in your code:\n",
-    "1. How do we handle missing files?\n",
-    "2. How do we handle non-numeric rows?\n",
-    "3. How do we safely convert types?\n",
+    "Before coding, Consider the following in your thought process:\n",
+    "1. Check for the file if it is missing or not.\n",
+    "2. Check for non-numeric rows and handle them gracefully. Displaying a warning message would be beneficial.\n",
+    "3. Convert types safely. make sure to handle exceptions.\n",
     "\n",
     "Act as a Senior Engineer.\n",
     "Constraints:\n",
